@@ -1,3 +1,10 @@
+2014-07-17  Karl Berry  <karl@tug.org>
+
+	* tcfmgr,
+	* fmtutil.sh,
+	* fmtutil-sys.sh:
+	* texconfig.1: prepend directory of executable to $PATH.
+
 2014-07-13  Karl Berry  <karl@tug.org>
 
 	* texconfig.sh,
